# BladeBlade

./: .gitignore  Cargo.toml  Installer.iss  README.md  options.cfg  transform_exe.sh
data/: blade.blend  blade.mtl  bullet.blend  dragon.gltf  explosion.blend1  explosion.mtl  hit.blend  hit.blend1  hit.mtl  monster.mtl  player.blend  player.gltf  player.mtl
raw/: blade.blend1  bullet.blend1  explosion.blend  monster.blend  monster.blend1  monster_icon.blend  monster_icon.blend1  player.blend1  resource.rc
src/: controls.rs  error.rs  game_state.rs  main.rs  map.rs  menu.rs  sfx.rs  spatial_grid.rs  speech.rs  ui.rs  utils.rs
